# webserver

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  a.out  junk.cpp  refs  webserv
WebServer/: Makefile
WebServer/conf/: default.conf  minimal.conf  multiple.conf  old_default.conf  server.conf  test.conf  tester.conf
WebServer/includes/: CgiHandler.hpp  Cluster.hpp  Config.hpp  ErrorCode.hpp  Http.hpp  HttpRequest.hpp  HttpResponse.hpp  Parser.hpp  Request.hpp  Response.hpp  Server.hpp  ServerConfig.hpp  StatusCode.hpp  TcpServer.hpp  cluster.hpp  utils.hpp  webserv.hpp
WebServer/srcs/: CgiHandler.cpp  Cluster.cpp  Config.cpp  ErrorCode.cpp  Http.cpp  HttpRequest.cpp  HttpResponse.cpp  Parser.cpp  Request.cpp  Response.cpp  Server.cpp  ServerConfig.cpp  StatusCode.cpp  TcpServer.cpp  cluster.cpp  main.cpp  utils.cpp
WebServer/test/: ChunkedTester  ChunkedTester.cpp  chunked.py  testing.py
WebServer/test/execve/: main.cpp
WebServer/var/www/: delete.html  index.html  pi.html  upload  upload.html
WebServer/var/www/FormInputs/: followers.txt
WebServer/var/www/cgi-bin/: bad.cgi  helloworld.cgi  helloworld.py  python.cgi  python_post.cgi  something.cgi  test.py  test_post.html  test_python.html  testphp.cgi
conf/: default.conf
cop/: .gitignore
cop/conf/: default.conf
cop/includes/: Cluster.hpp  Parser.hpp  utils.hpp  webserver.hpp
cop/srcs/: Parser.cpp  webserver.cpp
includes/: Cluster.hpp  Parser.hpp  utils.hpp  webserv.hpp  webserver.hpp
srcs/: Cluster.cpp  Parser.cpp  TcpServer.cpp  error.cpp  main.cpp  utils.cpp  webserver.cpp
(+8 files in other folders)
